8214773: Replace use of thread unsafe strtok

Reviewed-by: thartmann, dholmes